# closeread-io-methodology

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  book.toml
.github/workflows/: ci-spec-v1.md  ci.yml
appendices-by-stack/: README.md
appendices-by-stack/elixir/: README.md
appendices-by-stack/go/: README.md
appendices-by-stack/java/: README.md
appendices-by-stack/node/: README.md
appendices-by-stack/php/: README.md
appendices-by-stack/python/: README.md
appendices-by-stack/ruby/: README.md
appendices-by-stack/rust/: README.md
findings-library/: README.md
findings-library/node/: committed-env-files-with-high-severity-secrets.md  high-entropy-secret-in-production-trpc-path.md  pinned-cdn-tarball-dependency.md  transitive-cve-in-meta-framework.md  zero-tests-detected-against-quarter-million-loc.md
findings-library/polyglot/: committed-env-file-in-repository.md  copyleft-license-without-source-headers.md  git-submodule-with-broken-remote.md  html-test-fixture-credential-noise.md  jwt-with-none-algorithm-accepted.md  missing-codeowners-file.md  missing-cors-allowlist-wildcard-origin.md  missing-security-md-no-disclosure-policy.md  monorepo-without-codeowners-per-package.md  niche-stack-language-without-hireability-mitigation.md  no-license-file-or-non-osi-license.md  out-of-date-dependencies-with-known-cves.md  out-of-date-package-manifest-with-eol-runtime.md  secret-in-dockerfile-build-arg.md  secrets-in-git-history-not-current-tree.md  shallow-clone-bus-factor-inconclusive.md  single-author-100-percent-commit-share.md  sql-injection-via-string-concatenation.md  test-coverage-below-30-percent-of-source-loc.md  third-party-vendor-inventory-with-critical-path-concentration.md  weak-tls-cipher-suite-in-server-config.md  xss-via-dangerouslysetinnerhtml.md
lessons/: README.md
methodology/: 01-philosophy.md  02-reliability.md  03-sca.md  04-stack.md  05-ip-ownership.md  06-third-party.md  07-credentials.md  08-security.md  09-test-coverage.md  10-key-person.md  README.md  reflect-qa-harness-spec.md  reviewer-calibration-study-design.md
methodology/specialists/: api-versioning-specialist-spec.md  db-migration-risk-specialist-spec.md  license-compliance-specialist-spec.md
packet-template/: README.md  render-pipeline-refactor-v1.md
reference-cli/: README.md  cli-ergonomics-audit-v1.md  perf-profiling-plan-v1.md  test-coverage-gap-analysis.md
reference-cli/mcp-server/: README.md  pyproject.toml
reference-cli/mcp-server/src/closeread_audit_mcp/: __main__.py  server.py
reference-cli/verify-mcp/: README.md  pyproject.toml
reference-cli/verify-mcp/src/closeread_verify_mcp/: __main__.py  server.py
sample-set/: 22-repo-synthesis-essay-v1.md
scripts/: regenerate-summary-spec.md
